--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "./deploy.sh"
+    "deploy": "sh deploy.sh",
+    "push": "sh gitpush.sh"
   },
   "dependencies": {
     "vue": "^3.2.47",
