--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "push": "sh gitpush.sh"
   },
   "dependencies": {
+    "gsap": "^3.11.5",
+    "tsparticles": "^2.9.3",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-particles": "^2.9.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
