--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "push": "sh gitpush.sh"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "gsap": "^3.11.5",
     "tsparticles": "^2.9.3",
     "vue": "^3.2.47",
@@ -18,8 +20,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
+    "sass": "^1.59.3",
+    "sass-loader": "^13.2.1",
     "vite": "^4.1.4"
   }
 }
