--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.11.5",
     "tsparticles": "^2.9.3",
     "vue": "^3.2.47",
+    "vue-lite-youtube-embed": "^1.2.0",
     "vue-router": "^4.1.6",
     "vue3-particles": "^2.9.3"
   },
