--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -8,7 +8,7 @@
     "libraries": [
       "vue-router", "Bootstrap 5.2", "tsParticles"
     ],
-    "description": "This is the portfolio you are looking at now! It is hand-crafted by myself using Vue.js using Bootstrap 5.2 for UI elements and flexboxing, with tsParticles for the fancy background. It is a single page app using a vue-router to switch pages. Makes use of json loading for external data such as the project cards you are reading right now!",
+    "description": "This is the website you are looking at right now! I coded this portfolio as a SPA with a router using Vue.js, SCSS, Bootstrap 5.2, with the addition of background animations using tsParticles.",
     "buttons": [
       {
         "label": "Source",
@@ -26,7 +26,7 @@
     "libraries": [
       "SDL", "expat"
     ],
-    "description": "College project in 2019 for one of my Computer Science classes: 2D Game Engine in C++. I drew all the animations myself using Krita and a pen tablet, and programmed the entire game engine myself using the SDL library to help render images and play sounds.",
+    "description": "University project in 2019 for a Computer Science class. I drew the images/animations myself, and programmed the entire game engine in C++ using the SDL library to render images and play sounds.",
     "buttons": [
       {
         "label": "Source",
