--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "gsap": "^3.11.5",
     "tsparticles": "^2.9.3",
+    "vite-tsconfig-paths": "^4.0.7",
     "vue": "^3.2.47",
     "vue-lite-youtube-embed": "^1.2.0",
     "vue-router": "^4.1.6",
