--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@/**/*": ["./src/**/*"]
+      "@/*": ["./src/*"]
     },
     "allowJs": true,
     "outDir": "dist"
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/*"],
   "exclude": ["node_modules", "dist"]
 }
