--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "gsap": "^3.11.5",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "tsparticles": "^2.9.3",
     "vite-tsconfig-paths": "^4.0.7",
     "vue": "^3.2.47",
