--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "sh deploy.sh"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
