--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -11,30 +11,27 @@
     "description": "This is the website you are looking at right now! I coded this portfolio as a SPA with a router using Vue.js, SCSS, Bootstrap 5.2, with the addition of background animations using tsParticles.",
     "buttons": [
       {
-        "label": "Source",
-        "type": "link",
+        "type": "source",
         "url": "https://github.com/Techtress/vue-portfolio"
       }
     ]
   },
   {
     "image": "2dgame.png",
-    "title": "Cave Monster Slayer - 2D Game Engine",
+    "title": "2D Game Engine in C++",
     "skills": [
       "C++", "XML", "2D Animation"
     ],
     "libraries": [
       "SDL", "expat"
     ],
-    "description": "University project in 2019 for a Computer Science class. I drew the images/animations myself, and programmed the entire game engine in C++ using the SDL library to render images and play sounds.",
+    "description": "University project in 2019 for a Computer Science class entitled <i>2D Game Engine in C++</i>. I drew the images/animations myself, and programmed the entire game engine in C++ using the SDL library to render images and play sounds.",
     "buttons": [
       {
-        "label": "Source",
-        "type": "link",
+        "type": "source",
         "url": "https://github.com/Techtress/2019-Cave-Monster-Slayer"
       },
       {
-        "label": "Watch Demo",
         "type": "video",
         "url": "alan9.mp4"
       }
