--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.11.5",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "pinia": "^2.0.33",
     "tsparticles": "^2.9.3",
     "vite-tsconfig-paths": "^4.0.7",
     "vue": "^3.2.47",
